[gd_scene load_steps=7 format=4 uid="uid://bo3yjn1jcs8j5"]

[ext_resource type="Script" path="res://menus/RandomQuote.gd" id="3"]
[ext_resource type="Script" path="res://menus/StartMenu.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://dp0fkqdomkys5" path="res://graphics/phoenix.png" id="4_vbtqb"]
[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="5"]
[ext_resource type="Script" path="res://menus/PressStartMenu.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dpavg7fpmvy8v" path="res://graphics/party_hat.png" id="8"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("5")
script = ExtResource("4")

[node name="AudioIn" type="Threen" parent="."]

[node name="AudioOut" type="Threen" parent="."]

[node name="PressStart" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("6")

[node name="VBoxContainer" type="VBoxContainer" parent="PressStart"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.568787
offset_right = -0.568848
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 1

[node name="TextureRect3" type="TextureRect" parent="PressStart/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("4_vbtqb")
expand_mode = 1
stretch_mode = 5

[node name="BirthdayHat" type="TextureRect" parent="PressStart/VBoxContainer/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -685.431
offset_top = -307.0
offset_right = 165.129
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PressStart/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 70

[node name="RandomQuote" type="Label" parent="PressStart/VBoxContainer/VBoxContainer"]
auto_translate_mode = 2
layout_mode = 2
text = "(NT)On the wings of a dream"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3")

[node name="Label" type="Label" parent="PressStart/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Press any key"
horizontal_alignment = 1
vertical_alignment = 3

[connection signal="start_pressed" from="PressStart" to="." method="_on_PressStart_start_pressed"]
[connection signal="birthday_triggered" from="PressStart/VBoxContainer/VBoxContainer/RandomQuote" to="PressStart/VBoxContainer/TextureRect3/BirthdayHat" method="show"]
